@@ -435,7 +435,7 @@ else {
 										}
 										if ($resultMarkbook->rowCount()==1) {
 											$rowMarkbook=$resultMarkbook->fetch() ;
-											print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Markbook/markbook_edit_data.php&gibbonCourseClassID=$gibbonCourseClassID&gibbonMarkbookColumnID=" . $rowMarkbook["gibbonMarkbookColumnID"] . "'><img style='margin: 0 0 -4px 3px' title='" . _('Linked Markbook') . "' src='./themes/" . $_SESSION[$guid]["gibbonThemeName"] . "/img/markbook.png'/></a> | " ;
+											print "<a href='" . $_SESSION[$guid]["absoluteURL"] . "/index.php?q=/modules/Markbook/markbook_edit_data.php&gibbonCourseClassID=$gibbonCourseClassID&gibbonMarkbookColumnID=" . $rowMarkbook["gibbonMarkbookColumnID"] . "'>" . _('Linked Markbook') . "<img style='margin: 0 5px -4px 3px' title='" . _('Linked Markbook') . "' src='./themes/" . $_SESSION[$guid]["gibbonThemeName"] . "/img/markbook.png'/></a> | " ;
 										}
 										print "<input type='checkbox' name='confidentialPlan' class='confidentialPlan' value='Yes' />" ;
 										print "<span title='" . _('Includes student data & teacher\'s notes') . "' style='font-size: 85%; font-weight: normal; font-style: italic'> " . _('Show Confidential Data') . "</span>" ;
